<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.ShopFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shop_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="parent"
        >

        <View
            android:id="@+id/viewHeaderBackground"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/bg_gradient_half2"
            app:layout_constraintStart_toEndOf="parent"
            tools:ignore="MissingConstraints" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/main_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logo"
                android:textSize="19dp"
                android:fontFamily="@font/app_main_font_bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"/>

            <TextView
                android:id="@+id/text_main1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_sub_titile"
                android:textSize="18dp"
                android:fontFamily="@font/app_main_font_bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/main_logo"
                app:layout_constraintLeft_toLeftOf="@id/main_logo"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--버튼 카드뷰-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/shop_cardbutton"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:cardBackgroundColor="#eb5b4b"
            app:cardCornerRadius="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeaderBackground"
            app:layout_constraintTop_toBottomOf="@+id/viewHeaderBackground"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    android:layout_width="75dp"
                    android:layout_height="70dp"
                    android:text="@string/shop_button1"
                    android:fontFamily="@font/app_main_font_bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:textColor="#3A3A3A"
                    android:background="@drawable/bg_button_radius"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_width="75dp"
                    android:layout_height="70dp"
                    android:text="@string/shop_button2"
                    android:layout_marginLeft="10dp"
                    android:textColor="#3A3A3A"
                    android:background="@drawable/bg_button_radius"
                    app:layout_constraintTop_toTopOf="@id/button"
                    android:fontFamily="@font/app_main_font_bold"
                    app:layout_constraintLeft_toRightOf="@id/button"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button3"
                    android:layout_width="75dp"
                    android:layout_height="70dp"
                    android:text="@string/shop_button3"
                    android:layout_marginLeft="10dp"
                    android:textColor="#3A3A3A"
                    android:background="@drawable/bg_button_radius"
                    app:layout_constraintTop_toTopOf="@id/button"
                    android:fontFamily="@font/app_main_font_bold"
                    app:layout_constraintLeft_toRightOf="@id/button2"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:layout_width="75dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bg_button_radius"
                    android:fontFamily="@font/app_main_font_bold"
                    android:text="@string/shop_button4"
                    android:textColor="#3A3A3A"
                    app:layout_constraintLeft_toRightOf="@id/button3"
                    app:layout_constraintTop_toTopOf="@id/button" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/shop_cardbutton"
            tools:ignore="MissingConstraints">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="150dp">

                    <TextView
                        android:id="@+id/text_mainbanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="19dp"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/app_main_font_bold"
                        android:text="@string/shop_sub_titile1"
                        android:textSize="20dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_recyclerview1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
                    </androidx.recyclerview.widget.RecyclerView>

                    <TextView
                        android:id="@+id/shop_mainbanner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="19dp"
                        android:layout_marginTop="40dp"
                        android:fontFamily="@font/app_main_font_bold"
                        android:text="@string/shop_sub_titile2"
                        android:textSize="20dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_recyclerview2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>