<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient">



    <TextView
        android:id="@+id/splash_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intro0_1"
        android:textAlignment="center"
        android:fontFamily="@font/app_main_font_bold"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="50dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/splash_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intro0_2"
        android:fontFamily="@font/app_main_font_bold"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/splash_title_1"
        app:layout_constraintLeft_toLeftOf="@id/splash_title_1"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/splash_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|"
        android:fontFamily="@font/app_main_font_bold"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/splash_title_2"
        app:layout_constraintLeft_toLeftOf="@id/splash_title_2"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        tools:ignore="MissingConstraints" />
    <TextView
        android:id="@+id/splash_title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_intro0_3"
        android:fontFamily="@font/app_main_font_bold"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/splash_title_3"
        app:layout_constraintLeft_toLeftOf="@id/splash_title_2"
        android:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>