<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_gradient_half">

            <TextView
                android:id="@+id/main_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_logo"
                android:textSize="18dp"
                android:fontFamily="@font/app_main_font_bold"
                android:textColor="@color/royalblue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/text_main1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main1"
                android:textSize="20dp"
                android:fontFamily="@font/app_main_font_bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/main_logo"
                app:layout_constraintLeft_toLeftOf="@id/main_logo"
                android:layout_marginTop="10dp"
                />
            <TextView
                android:id="@+id/text_main2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main2"
                android:textSize="20dp"
                android:fontFamily="@font/app_main_font_bold"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/text_main1"
                app:layout_constraintLeft_toLeftOf="@id/main_logo"
                android:layout_marginTop="10dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3">

            <TextView
                android:id="@+id/text_mainbanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_banner"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="19dp"
                android:fontFamily="@font/app_main_font_bold"
                />

            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/main_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/text_mainbanner"
                android:layout_marginTop="20dp">
            </androidx.recyclerview.widget.RecyclerView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</FrameLayout>